Fixing dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  color-scheme: dark;
 }
 
 /* Define scrollbar appearance for the entire app */
